# Layla-log

./: .gitignore  Cargo.toml  README.md
benches/: write.rs
doc/: async.md  init_and_set.md
src/: lib.rs  logger.rs  msg.rs  setting.rs  time.rs  writer.rs
tests/: disable.rs  double_init.rs  multi_thread.rs  scope_location.rs  time_zone.rs  universal_log.rs  write_in.rs
