[package]
name = "layla-log"
version = "0.3.2"
edition = "2021"
description = "A simple logger library."
license = "MIT"
authors = ["ILikeLayla <chen_rui_tao0525@163.com>"]
readme = "README.md"
homepage = "https://github.com/ILikeLayla/Layla-log"
documentation = "https://docs.rs/layla-log/latest/layla_log/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "layla_log"

[features]
async = ["tokio"]

[dependencies]
chrono = "0.4.40"
lazy_static = "1.5.0"
tokio = { version = "1.44.1", features = ["full"], optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[[bench]]
name = "write"
path = "benches/write.rs"
harness = false
